# system-network-scaling

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  pyproject.toml
config/: README.md  default.yaml
docs/: architecture.md
internal/ingress/: README.md  dispatcher.go  interfaces.go  normalizer.go  processor.go  processor_test.go  types.go  validator.go
output/: system_baseline_20260123T190345Z.json  system_baseline_20260123T202300Z.json  system_baseline_20260123T203812Z.json
scripts/: system_baseline.py
touch internal/ingress/: architecture.md
