[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-network-scaling"
version = "0.1.0"
description = "System & Network Scaling Lab - Building reliable, observable systems for data ingestion and latency-sensitive workloads"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "System Network Scaling Lab"},
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=23.0",
    "prometheus-client>=0.18",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "aiohttp>=3.9",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.6",
    "ipython>=8.0",
]

stress-test = [
    "locust>=2.17",
]

cloud = [
    "boto3>=1.28",
    "google-cloud-storage>=2.10",
]

[tool.setuptools]
packages = ["system_network_scaling"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
